--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1 class="display-1 text-center">Showier's Misspellings</h1>
         </div>
 
-        <div class="container m-3 justify-content-center text-center">
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/l1taQH.png">
             <small>Geyser, not Guyser</small>
         </div>
