--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="container-fluid p-5 bg-primary text-white">
-            <h1 class="display-1 text-center">Showier's Misspellings</h1>
+            <h1 class="display-1 text-center">Showier's Misspellings!</h1>
         </div>
 
         <div class="m-3 justify-content-center text-center">
