--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/l1taQH.png">
+            <img src="https://u.cubeupload.com/MDWalters/l1taQH.png" class="img-fluid">
             <br>
             <small>Geyser, not Guyser</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png">
+            <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png" class="img-fluid">
             <br>
             <small>I'm pretty sure the word "just" only has one "s" in it...</small>
         </div>
