--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
             <br>
             <small>I'm pretty sure the word "just" only has one "s" in it...</small>
         </div>
+
+        <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/nchYfZ.png" class="img-fluid">
+            <br>
+            <small>Did you mean CST?</small>
+        </div>
     </body>
 </html>
