--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
             <br>
             <small>Did you mean CST?</small>
         </div>
+
+        <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/qmO9Nd.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Svelite sounds like a lighter version of Svelte</small>
+        </div>
     </body>
 </html>
