--- a/index.html
+++ b/index.html
@@ -14,29 +14,9 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/l1taQH.png" class="img-fluid img-thumbnail">
+            <img src="" class="img-fluid img-thumbnail" id="img" alt="">
             <br>
-            <small>Geyser, not Guyser</small>
-        </div>
-
-        <div class="m-3 justify-content-center text-center">
-            <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png" class="img-fluid img-thumbnail">
-            <br>
-            <small>I'm pretty sure the word "just" only has one "s" in it...</small>
-        </div>
-
-        <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/nchYfZ.png" class="img-fluid img-thumbnail">
-            <br>
-            <small>Did you mean CST?</small>
-        </div>
-
-        <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/qmO9Nd.png" class="img-fluid img-thumbnail">
-            <br><br>
-            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
-            <br>
-            <small>Svelite sounds like a lighter version of Svelte</small>
+            <small id="img-alt"></small>
         </div>
     </body>
 </html>
