--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
             <br>
             <small id="img-alt"></small>
         </div>
+
+        <script src="./lib/index.js"></script>
     </body>
 </html>
