--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://mdwalters.ml/lib/index.css">
         <title>Showier's Misspellings!</title>
     </head>
-    <body>
+    <body id="app">
         <div class="container-fluid p-5 bg-primary text-white">
             <h1 class="display-1 text-center">Showier's Misspellings!</h1>
         </div>
