--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/qmO9Nd.png" class="img-fluid img-thumbnail">
-            <br><br>
             <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
             <br>
             <small>Svelite sounds like a lighter version of Svelte</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/Lv75Fi.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Libre or Live?</small>
         </div>
     </body>
 </html>
