--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     </head>
     <body>
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
+            <img src="https://meowerimg.codeflip.repl.co/static/Screen_Shot_2023-01-16_at_6.19.41_PM.png" class="img-fluid img-thumbnail">
             <br>
-            <small>Svelite sounds like a lighter version of Svelte</small>
+            <small>Grammar 101: Thier and there are two diffrent words</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
@@ -20,9 +20,11 @@
             <br>
             <small>Libre or Live?</small>
         </div>
-        
-        <div class="container-fluid p-5 bg-primary text-white">
-            <h1 class="display-1 text-center">Showier's Misspellings!</h1>
+
+        <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Svelite sounds like a lighter version of Svelte</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
