--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         <title>Showier's Misspellings!</title>
     </head>
     <body>
+        <div class="container-fluid p-5 bg-primary text-white">
+            <h1 class="display-1 text-center">Showier's Misspellings!</h1>
+        </div>
+
         <div class="m-3 justify-content-center text-center">
             <img src="https://meowerimg.codeflip.repl.co/static/Screen_Shot_2023-01-16_at_6.19.41_PM.png" class="img-fluid img-thumbnail">
             <br>
