--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/SaqkTk.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>I'm pretty sure "lisseners" don't exist sadly</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://meowerimg.codeflip.repl.co/static/Screen_Shot_2023-01-16_at_6.19.41_PM.png" class="img-fluid img-thumbnail">
             <br>
-            <small>Grammar 101: Thier and there are two diffrent words</small>
+            <small>English 101: Thier and there are two diffrent words</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
