--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/SaqkTk.png" class="img-fluid img-thumbnail">
             <br>
-            <small>I'm pretty sure "lisseners" don't exist sadly</small>
+            <small>I'm pretty sure "lisseners" and "rconecting" don't exist sadly</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
