Lissiner, Lisserner, and Isserner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/fchhjs.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Lissener has friends: Lissiner, Lisserner, and Isserner</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/SaqkTk.png" class="img-fluid img-thumbnail">
             <br>
             <small>I'm pretty sure "lisseners" and "rconecting" don't exist sadly</small>
