--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/fchhjs.png" class="img-fluid img-thumbnail">
             <br>
-            <small>Lissener has friends: Lissiner, Lisserner, and Isserner</small>
+            <img src="https://u.cubeupload.com/MDWalters/OGOBBt.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Lissener has friends: Lissiner, Lisserner, Isserner, and Listerner</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
