--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/DGsmdW.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Grammarly to the rescue?</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/fchhjs.png" class="img-fluid img-thumbnail">
             <br>
             <img src="https://u.cubeupload.com/MDWalters/OGOBBt.png" class="img-fluid img-thumbnail">
