--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/TDrro3.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>"Changing" has no "E" in it</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/NLXrSk.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>That one misspelling makes it's hacking feature fake</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/DGsmdW.png" class="img-fluid img-thumbnail">
             <br>
             <small>Grammarly to the rescue?</small>
@@ -60,7 +72,7 @@
         <div class="m-3 justify-content-center text-center">
             <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png" class="img-fluid img-thumbnail">
             <br>
-            <small>I'm pretty sure the word "just" only has one "s" in it...</small>
+            <small>I'm pretty sure the word "just" only has one "S" in it...</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
