--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/yPkrax.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Try to learn how to spell resize, <i>then</i> you can resize</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/TDrro3.png" class="img-fluid img-thumbnail">
             <br>
             <small>"Changing" has no "E" in it</small>
