Remove italic, it looks cringe

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/yPkrax.png" class="img-fluid img-thumbnail">
             <br>
-            <small>Try to learn how to spell resize, <i>then</i> you can resize</small>
+            <small>Try to learn how to spell resize, then you can resize</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
