--- a/index.html
+++ b/index.html
@@ -14,75 +14,75 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/yPkrax.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/yPkrax.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Try to learn how to spell resize, then you can resize</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/TDrro3.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/TDrro3.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>"Changing" has no "E" in it</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/NLXrSk.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/NLXrSk.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>That one misspelling makes it's hacking feature fake</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/DGsmdW.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/DGsmdW.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Grammarly to the rescue?</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/fchhjs.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/fchhjs.png" class="img-fluid img-thumbnail rounded">
             <br><br>
-            <img src="https://u.cubeupload.com/MDWalters/OGOBBt.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/OGOBBt.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Lissener has friends: Lissiner, Lisserner, Isserner, and Listerner</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/SaqkTk.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/SaqkTk.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>I'm pretty sure "lisseners" and "rconecting" don't exist sadly</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://meowerimg.codeflip.repl.co/static/Screen_Shot_2023-01-16_at_6.19.41_PM.png" class="img-fluid img-thumbnail">
+            <img src="https://meowerimg.codeflip.repl.co/static/Screen_Shot_2023-01-16_at_6.19.41_PM.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>English 101: Thier and there are two diffrent words</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/Lv75Fi.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/Lv75Fi.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Libre or Live?</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/f9Nerq.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Svelite sounds like a lighter version of Svelte</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/nchYfZ.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/nchYfZ.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Did you mean CST?</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png" class="img-fluid img-thumbnail">
+            <img src="https://forums.meower.org/uploads/default/original/1X/6ab99eb0f931c8e28306deb844bc5a1abda457bb.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>I'm pretty sure the word "just" only has one "S" in it...</small>
         </div>
 
         <div class="m-3 justify-content-center text-center">
-            <img src="https://u.cubeupload.com/MDWalters/l1taQH.png" class="img-fluid img-thumbnail">
+            <img src="https://u.cubeupload.com/MDWalters/l1taQH.png" class="img-fluid img-thumbnail rounded">
             <br>
             <small>Geyser, not Guyser</small>
         </div>
