--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://u.cubeupload.com/MDWalters/nZw0Re.png" class="img-fluid img-thumbnail">
+            <br>
+            <small>Showier can't escape the misspellings curse</small>
+        </div>
+
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/yPkrax.png" class="img-fluid img-thumbnail">
             <br>
             <small>Try to learn how to spell resize, then you can resize</small>
