--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/68120127?v=4">
         <link rel="stylesheet" href="https://mdwalters.ml/lib/index.css">
         <title>Showier's Misspellings!</title>
