--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         </div>
 
         <div class="m-3 justify-content-center text-center">
+            <img src="https://cdn.discordapp.com/attachments/1127825131004252200/1197340751147847680/image.png?ex=65bae978&is=65a87478&hm=565201c65f184b21542de29039cf14a992f5aff15315ec0806cc068426c144ec&" class="img-fluid img-thumbnail">
+            <br>
+            <small>Define "deticated"</small>
+        </div>
+        
+        <div class="m-3 justify-content-center text-center">
             <img src="https://u.cubeupload.com/MDWalters/nZw0Re.png" class="img-fluid img-thumbnail">
             <br>
             <small>Showier can't escape the misspellings curse</small>
